--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.39MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.00MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-181.5KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.14MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.66MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-949.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-4.19MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-706.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-471.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-203.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-847.8KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-604.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-202.0KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-604.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-604.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-604.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-604.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-604.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-604.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.39MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-181.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-471.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-847.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-604.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
