--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-997.4KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-183.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-692.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-202.0KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-706.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-230.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: bpjchongkong.kozow.com, port: 12350, type: vmess, uuid: 9b29114b-723b-40ca-bc2b-e3f97d43534d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjchongkong.kozow.com}}
-  - {name: 🇨🇳 台湾-653.0KB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-232.4KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.96MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-450.2KB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-473.9KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇻🇳 越南-5.56MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.53MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: 120.233.7.221, port: 18003, type: vmess, uuid: 67c50f6a-816d-3555-89b4-19dd29608f8b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.05MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-230.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-653.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-230.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-653.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-230.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-653.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-653.0KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-230.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-653.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-230.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-653.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-230.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-653.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-997.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-706.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-230.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-653.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
