--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-183.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-692.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-803.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-232.4KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.96MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-183.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-450.2KB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.96MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-473.9KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-5.56MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.53MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: 120.233.7.221, port: 18003, type: vmess, uuid: 67c50f6a-816d-3555-89b4-19dd29608f8b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.05MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.89MB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-803.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-803.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-803.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-803.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-803.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-803.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-692.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-803.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-232.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.89MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
