--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-450.2KB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-924.4KB/s(Youtube:不良林), server: 120.233.7.221, port: 32004, type: vmess, uuid: 67c50f6a-816d-3555-89b4-19dd29608f8b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-563.1KB/s(Youtube:不良林), server: 45.78.7.209, port: 10620, type: ss, cipher: aes-256-gcm, password: J5ZLSoqdRfDjvuwx}
+  - {name: 🇯🇵 日本-3.16MB/s(Youtube:不良林), server: 204.124.182.134, port: 10620, type: vmess, uuid: 4361d49a-6cb1-41c4-85d5-2a29069ffa46, alterId: 8, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.44MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-476.5KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-2.24MB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: a55602c8-d3d4-4c7f-b552-875c624b899c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
-  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 45.78.9.191, port: 10620, type: ss, cipher: aes-256-gcm, password: J5ZLSoqdRfDjvuwx}
-  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: 173.242.113.222, port: 10620, type: vmess, uuid: 4361d49a-6cb1-41c4-85d5-2a29069ffa46, alterId: 8, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-654.4KB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
-  - {name: 🇳🇱 荷兰-3.84MB/s(Youtube:不良林), server: 104.245.99.172, port: 10620, type: vmess, uuid: 4361d49a-6cb1-41c4-85d5-2a29069ffa46, alterId: 8, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-936.5KB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-924.4KB/s(Youtube:不良林), server: 120.233.7.221, port: 32004, type: vmess, uuid: 67c50f6a-816d-3555-89b4-19dd29608f8b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.08MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-489.3KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-530.9KB/s(Youtube:不良林), server: 120.233.7.221, port: 18003, type: vmess, uuid: 67c50f6a-816d-3555-89b4-19dd29608f8b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-654.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-936.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-654.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-936.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-654.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-936.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-654.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-936.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-654.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-936.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-654.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-936.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-450.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-563.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-654.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.84MB/s(Youtube:不良林)
-      - 🇩🇪 德国-936.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-924.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-530.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
